--- a/src/assets/variable.styl
+++ b/src/assets/variable.styl
@@ -1,5 +1,5 @@
 /*背景图*/
-$bgImg = "http://blogfile.xhay1122.com/page/common/geometry2.png"
+// $bgImg = "http://blogfile.xhay1122.com/page/common/geometry2.png"
 // $bgImg = "../../assets/images/bg2.jpg"
 
 /*字体颜色*/
@@ -14,5 +14,6 @@ $slidebarWidth = 6.4rem
 $slidebarBg = #222222
 
 /*页面宽度*/
-$mainWidth = 16rem
+$mainWidth_max = 20rem
+$mainWidth_min = 6.4rem
 
